accessible/mac/HyperTextAccessibleWrap.mm
@@ -22,14 +22,12 @@ using namespace mozilla::a11y;
 class HyperTextIterator {
  public:
   HyperTextIterator(HyperTextAccessible* aStartContainer, int32_t aStartOffset,
-                    HyperTextAccessible* aEndContainer, int32_t aEndOffset,
-                    bool aSkipBullet = false)
+                    HyperTextAccessible* aEndContainer, int32_t aEndOffset)
       : mCurrentContainer(aStartContainer),
         mCurrentStartOffset(aStartOffset),
         mCurrentEndOffset(aStartOffset),
         mEndContainer(aEndContainer),
-        mEndOffset(aEndOffset),
-        mSkipBullet(aSkipBullet) {}
+        mEndOffset(aEndOffset) {}
 
   bool Next();
 
@@ -56,8 +54,6 @@ class HyperTextIterator {
 
   HyperTextAccessible* mEndContainer;
   int32_t mEndOffset;
-
-  bool mSkipBullet;
 };
 
 bool HyperTextIterator::NormalizeForward() {
@@ -95,7 +91,7 @@ bool HyperTextIterator::NormalizeForward() {
     // If there is a link at this offset, mutate into it.
     if (link && link->IsHyperText()) {
       mCurrentContainer = link->AsHyperText();
-      if (mSkipBullet && link->IsHTMLListItem()) {
+      if (link->IsHTMLListItem()) {
         Accessible* bullet = link->AsHTMLListItem()->Bullet();
         mCurrentStartOffset = bullet ? nsAccUtils::TextLength(bullet) : 0;
       } else {
@@ -153,7 +149,7 @@ bool HyperTextIterator::NormalizeBackward() {
       return true;
     }
 
-    if (mSkipBullet && mCurrentContainer->IsHTMLListItem() &&
+    if (mCurrentContainer->IsHTMLListItem() &&
         mCurrentContainer->AsHTMLListItem()->Bullet() == link) {
       mCurrentStartOffset = 0;
       NormalizeBackward();
@@ -219,6 +215,16 @@ void HyperTextAccessibleWrap::TextForRange(nsAString& aText,
                                            int32_t aStartOffset,
                                            HyperTextAccessible* aEndContainer,
                                            int32_t aEndOffset) {
+  if (IsHTMLListItem()) {
+    Accessible* maybeBullet = GetChildAtOffset(aStartOffset - 1);
+    if (maybeBullet) {
+      Accessible* bullet = AsHTMLListItem()->Bullet();
+      if (maybeBullet == bullet) {
+        TextSubstring(0, nsAccUtils::TextLength(bullet), aText);
+      }
+    }
+  }
+
   HyperTextIterator iter(this, aStartOffset, aEndContainer, aEndOffset);
   while (iter.Next()) {
     nsAutoString text;
@@ -246,7 +252,7 @@ int32_t HyperTextAccessibleWrap::LengthForRange(
     int32_t aStartOffset, HyperTextAccessible* aEndContainer,
     int32_t aEndOffset) {
   int32_t length = 0;
-  HyperTextIterator iter(this, aStartOffset, aEndContainer, aEndOffset, true);
+  HyperTextIterator iter(this, aStartOffset, aEndContainer, aEndOffset);
   while (iter.Next()) {
     length += iter.SegmentLength();
   }
@@ -258,7 +264,7 @@ void HyperTextAccessibleWrap::OffsetAtIndex(int32_t aIndex,
                                             HyperTextAccessible** aContainer,
                                             int32_t* aOffset) {
   int32_t index = aIndex;
-  HyperTextIterator iter(this, 0, this, CharacterCount(), true);
+  HyperTextIterator iter(this, 0, this, CharacterCount());
   while (iter.Next()) {
     int32_t segmentLength = iter.SegmentLength();
     if (index <= segmentLength) {
@@ -550,7 +556,7 @@ TextPoint HyperTextAccessibleWrap::FindTextPoint(
     EWordMovementType aWordMovementType) {
   // Layout can remain trapped in an editable. We normalize out of
   // it if we are in its last offset.
-  HyperTextIterator iter(this, aOffset, this, CharacterCount(), true);
+  HyperTextIterator iter(this, aOffset, this, CharacterCount());
   if (aDirection == eDirNext) {
     iter.NormalizeForward();
   } else {
